--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mantine/form": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
     "@tabler/icons": "^3.30.0",
+    "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
