--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@headlessui/react": "^2.0.4",
     "@mantine/core": "^7.16.3",
     "@mantine/form": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
     "@tabler/icons": "^3.30.0",
     "@tabler/icons-react": "^3.30.0",
+    "@tailwindcss/postcss": "^4.0.7",
     "@tailwindcss/vite": "^4.0.6",
+    "aos": "^2.3.4",
+    "clsx": "^2.1.1",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.6",
+    "react-icon-cloud": "^4.1.7",
+    "react-pdf": "^9.2.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.7",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
