--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,15 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "noImplicitAny": false,  
+    "strict": false,         
+    "skipLibCheck": true,    
+    "allowJs": true 
+  }
 }
